--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "learn-source",
   "dependencies": {
+    "@antv/x6": "^1.32.0",
     "echarts": "^5.3.2",
+    "fabric": "^5.2.1",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0"
   },
