--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "crc64-ecma182.js": "^1.0.0",
     "echarts": "^5.3.2",
     "fabric": "^5.2.1",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
-    "ramda": "^0.28.0"
+    "npm": "^8.15.0",
+    "ramda": "^0.28.0",
+    "sql.js": "^1.7.0"
   },
   "license": "MIT"
 }
